# vatran

./: .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMakeLists.txt  Dockerfile  HCSERVICE.md  README.md  go.mod  go.sum  vatran.cmake
design_docs/: ui.md
go/: API.md  BGP_API.md  HC_API.md  config_example.yaml  plan_bgp.md
go/bgpservice/: bgp.go  config.go  handlers.go  routes.go  server.go  state.go
go/client/: client.go
go/cmd/authctl/: USAGE.md  main.go
go/cmd/bgp-service/: main.go
go/cmd/hc-service/: main.go
go/cmd/katran-cli/: main.go
go/cmd/katran-server/: main.go
go/cmd/nic-affinity/: main.go
go/hcservice/: checker.go  config.go  dialer.go  handlers.go  katran_client.go  routes.go  scheduler.go  server.go  somark.go  state.go
go/katran/: bpf_test.go  config.go  config_test.go  doc.go  errors.go  example_test.go  features.go  features_test.go  go.mod  healthcheck.go  healthcheck_test.go  integration_test.go  katran.go  katran_test.go  lru.go  monitor.go  monitor_test.go  quic.go  real.go  routing.go  routing_test.go  stats.go  types.go  utils.go  vip.go
go/nicaffinity/: nicaffinity.go
go/server/: config.go  routes.go  server.go
go/server/auth/: authenticator.go  authenticator_test.go  session.go  session_test.go  store.go  store_test.go  user.go  user_test.go
go/server/handlers/: auth.go  config.go  features.go  healthcheck.go  lifecycle.go  lru.go  metrics.go  monitor.go  query.go  quic.go  real.go  routing.go  stats.go  utils.go  vip.go  vip_healthcheck.go
go/server/lb/: bgpclient.go  hcclient.go  manager.go  poller.go  state.go
go/server/metrics/: collector.go
go/server/middleware/: auth.go  cors.go  logging.go  recovery.go
go/server/models/: errors.go  request.go  response.go
go/server/types/: types.go
include/: katran_capi.h  katran_capi_types.h
scripts/: build_ui.sh  copy_build_artifacts.sh  get_ui_deps.sh  setup_submodules.sh
src/: katran_capi.cpp  katran_capi_smoke.c
ui/: app.js  styles.css
ui/src/: index.html  index.js  styles.css
upstream_patch/: build_katran.patch
